# Cognita

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: simple_example.py
src/cognita/: __init__.py
src/cognita/aggregation/: __init__.py  async_agg.py  base.py  fedavg.py  fednova.py  fedopt.py  fedprox.py  scaffold.py
src/cognita/byzantine/: __init__.py  brute_force.py  byzantine_resilient.py  geo_median.py  krum.py  trimmed_mean.py
src/cognita/communication/: __init__.py  efficiency.py
src/cognita/compression/: __init__.py  coding.py  compressor.py  quantization.py  sparsification.py
src/cognita/core/: __init__.py  client.py  coordinator.py  fl_config.py  model_manager.py  server.py
src/cognita/horizontal/: __init__.py  horizontal_fl.py
src/cognita/privacy/: __init__.py  dp_sgd.py  gradient_noise.py  privacy_accountant.py  secure_aggregation.py
src/cognita/utils/: __init__.py  logging.py  metrics.py  serialization.py
src/cognita/vertical/: __init__.py  vertical_fl.py
tests/unit/: test_aggregation.py  test_privacy.py
