[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognita"
version = "1.0.0"
description = "A comprehensive federated learning platform with privacy-preserving mechanisms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Cognita Team", email = "team@cognita.ai"}
]
keywords = ["federated-learning", "privacy", "machine-learning", "distributed-systems", "differential-privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security/Privacy",
]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "cryptography>=41.0.0",
    "pycryptodome>=3.18.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.14.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "redis>=4.6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
]
gpu = ["torch>=2.0.0+cu118"]
all = ["cognita[dev,gpu]"]

[project.urls]
Homepage = "https://github.com/moggan1337/Cognita"
Documentation = "https://cognita.readthedocs.io"
Repository = "https://github.com/moggan1337/Cognita"
Issues = "https://github.com/moggan1337/Cognita/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
